src/test/ui/refutable-pattern-errors.stderr
error[E0005]: refutable pattern in function argument: `(_, _)` not covered
  --> $DIR/refutable-pattern-errors.rs:12:9
   |
LL | fn func((1, (Some(1), 2..=3)): (isize, (Option<isize>, isize))) { }
   |         ^^^^^^^^^^^^^^^^^^^^^ pattern `(_, _)` not covered

error[E0005]: refutable pattern in local binding: `(_, _)` not covered
  --> $DIR/refutable-pattern-errors.rs:16:9
   |
LL |     let (1, (Some(1), 2..=3)) = (1, (None, 2));
   |         ^^^^^^^^^^^^^^^^^^^^^ pattern `(_, _)` not covered

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0005`.
